Fixed spacing, button text wrapping, paddings and margins

--- a/tinymce_button/shortcode-style.css
+++ b/tinymce_button/shortcode-style.css
@@ -304,15 +304,18 @@ blockquote { border-left: none !important; font-size: auto !important; padding: 
     margin-bottom: 36px;
 }
 .oet-featured-card-btn{
-		Background-color:#e57200;
+		display: block;
+		text-align: center;
+		Background-color: #e57200;
 		padding: 10px 20px;
-    font-size: 16px;
-    color: #fff;
-    font-family: "Raleway-Regular" !important;
-    margin-bottom: 36px;
+		font-size: 16px;
+		color: #fff;
+		font-family: "WorkSans-Regular" !important;
+		margin-bottom: 36px;
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
 		border-radius: 3px;
+		max-width: 180px;
 }
 .oet-featured-card-btn:hover{
 		color:#ffffff !important;
